se incluyen anotaciones generales y se cambia background y color de cabecera

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,9 +52,11 @@
   html {
     font-family: "Lucida Sans", sans-serif;
   }
+
+  /*Cabecera*/
   
   .header {
-    background-color: #9933cc;
+    background-color: black;
     color: #ffffff;
     padding: 15px;
   }
